RESOLVED FIXED 249968
Potential Assertion Fix - Fix loop condition in BidiRunList::replaceRunWithRuns
https://bugs.webkit.org/show_bug.cgi?id=249968
Summary Potential Assertion Fix - Fix loop condition in BidiRunList::replaceRunWithRuns
Ahmad Saleem
Reported 2022-12-31 03:56:27 PST
Hi Team, While going through Blink's commit, came across another potential assertion fix: Blink Commit - https://src.chromium.org/viewvc/blink?view=revision&revision=179068 WebKit Source - https://searchfox.org/wubkat/source/Source/WebCore/platform/text/BidiRunList.h#169 Just wanted to raise and check if it is worth fixing. Thanks!
Attachments
EWS
Comment 1 2023-01-04 17:44:51 PST
Committed 258465@main (f1fd9e9795a6): <https://commits.webkit.org/258465@main> Reviewed commits have been landed. Closing PR #8190 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2023-01-04 17:45:18 PST
Note You need to log in before you can comment on or make changes to this bug.