Cherry-pick 258465@main (f1fd9e9795a6). https://bugs.webkit.org/show_bug.cgi?id=249968

Potential Assertion Fix - Fix loop condition in BidiRunList::replaceRunWithRuns
    https://bugs.webkit.org/show_bug.cgi?id=249968

    Reviewed by Alan Baradlay.

    Merge - https://src.chromium.org/viewvc/blink?view=revision&revision=179068

    This patch is to potentially fix an assertion on debug builds by fixing a loop condition in
    BidiRunList::replaceRunWithRuns to check if next run exists before accessing it.

    * Source/WebCore/platform/text/BidiRunList.h:
    (BidiRunList<Run>::replaceRunwithRuns): update 'while' loop
    * LayoutTests/fast/text/bidi-replace-runs-crash.html: Add Test Case
    * LayoutTests/fast/text/bidi-replace-runs-crash-expected.txt: Add Test Case Expectation

    Canonical link: https://commits.webkit.org/258465@main